--- a/controller/dashboard.ini
+++ b/controller/dashboard.ini
@@ -7,8 +7,6 @@ OPENSTACK_KEYSTONE_DEFAULT_DOMAIN = "Default"
 OPENSTACK_KEYSTONE_DEFAULT_ROLE = "user"
 TIME_ZONE = "UTC"
 SESSION_ENGINE = 'django.contrib.sessions.backends.cache'
-CACHES = { 'default': { 'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache', 'LOCATION': 'controller:11211'  } }
+CACHES = { 'default': { 'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache', 'LOCATION': controller:11211  } }
 OPENSTACK_API_VERSIONS = { "identity": 3, "image": 2, "volume": 2  }
-OPENSTACK_NEUTRON_NETWORK = {'enable_router': True,'enable_quotas': False,'enable_distributed_router': False,'enable_ha_router': False,'enable_lb': False,'enable_firewall': False,'enable_vpn': False,'enable_fip_topology_check': False,
-	
-
+OPENSTACK_NEUTRON_NETWORK = {'enable_router': True,'enable_quotas': False,'enable_distributed_router': False,'enable_ha_router': False,'enable_lb': False,'enable_firewall': False,'enable_vpn': False,'enable_fip_topology_check': False}
